--- a/variables.css
+++ b/variables.css
@@ -1,8 +1,8 @@
 :root{
-    /* color-code */
+    /* color-codes */
     --thinylcol:#ffda27;
     --thickylcol:#deb100;
     --white:aliceblue;
     --webred:#f00;
-
+    --webyl:#ff0;
 }
